<resources>
    <string name="app_name">Quiz App</string>

    <string name="enter">What is your name?</string>
    <string name="hint">Enter your first name</string>
    <string name="password">password</string>

    <string name="question1">1. What is Deoxyribonucleic  acid commonly referred to as?</string>
    <string name="radioButton1">RNA</string>
    <string name="radioButton2">CIA</string>
    <string name="radioButton3">DNA</string>

    <string name="question2">2. What process involves treating rubber with sulfur to harden it?</string>
    <string name="aptSuiteBuilding">Enter the answer</string>

    <string name="question3">3. Name two different organelles of a eukaryotic cell.</string>
    <string name="checkbox1">Ribosome</string>
    <string name="checkbox2">Plasmids</string>
    <string name="checkbox3">Golgi apparatus</string>
    <string name="checkbox4">Diploid</string>

    <string name="question4">4. This word describes the force that pulls objects to the middle of the earth?</string>

    <string name="question5">5 What type of trees yield the resin used to produce turpentine?</string>
    <string name="radioButton4">Palm trees</string>
    <string name="radioButton5">Pine trees</string>
    <string name="radioButton6">Oak trees</string>

    <string name="question6">6. Cumulus and Cirrus are types of what?</string>

    <string name="question7">7. Which two planets have one or more moons?</string>
    <string name="checkbox5">Ceres</string>
    <string name="checkbox6">Mercury</string>
    <string name="checkbox7">Earth</string>
    <string name="checkbox8">Pluto</string>

    <string name="question8">8. Where in the human body would you find the scaphoid bone?</string>

    <string name="question9">9. Which grow upwards Stalactites or Stalagmites?</string>
    <string name="radioButton7">Stalactites</string>
    <string name="radioButton8">Stalagmites</string>

    <string name="question10">10. What process involves heating an ore to obtain a metal?</string>
    <string name="button">SUBMIT ANSWER</string>
    <string name="button1">Start</string>
</resources>
