<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityLogin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="@dimen/marginBottom"
        android:textSize="@dimen/textSizeTextView"
        android:text="@string/enter"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:inputType="text|textAutoComplete"
        android:hint="@string/hint"
        android:autofillHints="@string/password"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button1"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginTop="@dimen/marginTop" />
</LinearLayout>
